Added reconnection after connectivity loss

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "got": "^14.4.5"
+    "got": "^14.4.5",
+    "ping": "^0.4.4"
   },
   "name": "ams-spool-manager",
   "version": "1.0.0",
